integ.app.ts.snapshot/assembly-IntegStage/IntegStageAppStack0A3FDF01.template.json
{
 "Resources": {
  "ApiF70053CD": {
   "Type": "AWS::ApiGateway::RestApi",
   "Properties": {
    "Name": "Api"
   }
  },
  "ApiDeploymentB17BE62D3528be9b91ea465a1a8c9a8d462b7702": {
   "Type": "AWS::ApiGateway::Deployment",
   "Properties": {
    "RestApiId": {
     "Ref": "ApiF70053CD"
    },
    "Description": "Automatically created by the RestApi construct"
   },
   "DependsOn": [
    "ApicatsGET3EEB7C45",
    "ApicatsC0DF3637",
    "ApidogsGET80BC30C5",
    "Apidogs69626E87"
   ]
  },
  "ApiDeploymentStageprod3EB9684E": {
   "Type": "AWS::ApiGateway::Stage",
   "Properties": {
    "RestApiId": {
     "Ref": "ApiF70053CD"
    },
    "DeploymentId": {
     "Ref": "ApiDeploymentB17BE62D3528be9b91ea465a1a8c9a8d462b7702"
    },
    "StageName": "prod"
   }
  },
  "Apidogs69626E87": {
   "Type": "AWS::ApiGateway::Resource",
   "Properties": {
    "ParentId": {
     "Fn::GetAtt": [
      "ApiF70053CD",
      "RootResourceId"
     ]
    },
    "PathPart": "dogs",
    "RestApiId": {
     "Ref": "ApiF70053CD"
    }
   }
  },
  "ApidogsGET80BC30C5": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "HttpMethod": "GET",
    "ResourceId": {
     "Ref": "Apidogs69626E87"
    },
    "RestApiId": {
     "Ref": "ApiF70053CD"
    },
    "AuthorizationType": "NONE",
    "Integration": {
     "ConnectionId": {
      "Ref": "VpcLink42ED6FF0"
     },
     "ConnectionType": "VPC_LINK",
     "IntegrationHttpMethod": "GET",
     "Type": "HTTP_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "http://",
        {
         "Fn::GetAtt": [
          "DogsServiceNLB07D1DCE0",
          "DNSName"
         ]
        }
       ]
      ]
     }
    }
   }
  },
  "ApicatsC0DF3637": {
   "Type": "AWS::ApiGateway::Resource",
   "Properties": {
    "ParentId": {
     "Fn::GetAtt": [
      "ApiF70053CD",
      "RootResourceId"
     ]
    },
    "PathPart": "cats",
    "RestApiId": {
     "Ref": "ApiF70053CD"
    }
   }
  },
  "ApicatsGETApiPermissionIntegStageAppStackApi27B3D87BGETcats2C579167": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CatsServiceHandler5509C977",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:",
       {
        "Ref": "AWS::AccountId"
       },
       ":",
       {
        "Ref": "ApiF70053CD"
       },
       "/",
       {
        "Ref": "ApiDeploymentStageprod3EB9684E"
       },
       "/GET/cats"
      ]
     ]
    }
   }
  },
  "ApicatsGETApiPermissionTestIntegStageAppStackApi27B3D87BGETcatsA030A1AB": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CatsServiceHandler5509C977",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:",
       {
        "Ref": "AWS::AccountId"
       },
       ":",
       {
        "Ref": "ApiF70053CD"
       },
       "/test-invoke-stage/GET/cats"
      ]
     ]
    }
   }
  },
  "ApicatsGET3EEB7C45": {
   "Type": "AWS::ApiGateway::Method",
   "Properties": {
    "HttpMethod": "GET",
    "ResourceId": {
     "Ref": "ApicatsC0DF3637"
    },
    "RestApiId": {
     "Ref": "ApiF70053CD"
    },
    "AuthorizationType": "NONE",
    "Integration": {
     "IntegrationHttpMethod": "POST",
     "Type": "AWS_PROXY",
     "Uri": {
      "Fn::Join": [
       "",
       [
        "arn:aws:apigateway:us-east-2:lambda:path/2015-03-31/functions/",
        {
         "Fn::GetAtt": [
          "CatsServiceHandler5509C977",
          "Arn"
         ]
        },
        "/invocations"
       ]
      ]
     }
    }
   }
  },
  "DogsServiceVpc38F99C35": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc"
     }
    ]
   }
  },
  "DogsServiceVpcPublicSubnet1SubnetB325755A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "AvailabilityZone": "test-region-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PublicSubnet1"
     }
    ]
   }
  },
  "DogsServiceVpcPublicSubnet1RouteTable3FF7F73D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PublicSubnet1"
     }
    ]
   }
  },
  "DogsServiceVpcPublicSubnet1RouteTableAssociation1A0DF621": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPublicSubnet1RouteTable3FF7F73D"
    },
    "SubnetId": {
     "Ref": "DogsServiceVpcPublicSubnet1SubnetB325755A"
    }
   }
  },
  "DogsServiceVpcPublicSubnet1DefaultRoute2E8DE636": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPublicSubnet1RouteTable3FF7F73D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DogsServiceVpcIGW1D454B1F"
    }
   },
   "DependsOn": [
    "DogsServiceVpcVPCGW62DB7B71"
   ]
  },
  "DogsServiceVpcPublicSubnet1EIPDE531ACB": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PublicSubnet1"
     }
    ]
   }
  },
  "DogsServiceVpcPublicSubnet1NATGateway7B6A309A": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "DogsServiceVpcPublicSubnet1SubnetB325755A"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "DogsServiceVpcPublicSubnet1EIPDE531ACB",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "DogsServiceVpcPublicSubnet1DefaultRoute2E8DE636",
    "DogsServiceVpcPublicSubnet1RouteTableAssociation1A0DF621"
   ]
  },
  "DogsServiceVpcPublicSubnet2Subnet1252E6FC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "AvailabilityZone": "test-region-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PublicSubnet2"
     }
    ]
   }
  },
  "DogsServiceVpcPublicSubnet2RouteTable32F15A8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PublicSubnet2"
     }
    ]
   }
  },
  "DogsServiceVpcPublicSubnet2RouteTableAssociation60232721": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPublicSubnet2RouteTable32F15A8E"
    },
    "SubnetId": {
     "Ref": "DogsServiceVpcPublicSubnet2Subnet1252E6FC"
    }
   }
  },
  "DogsServiceVpcPublicSubnet2DefaultRoute88F038FC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPublicSubnet2RouteTable32F15A8E"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DogsServiceVpcIGW1D454B1F"
    }
   },
   "DependsOn": [
    "DogsServiceVpcVPCGW62DB7B71"
   ]
  },
  "DogsServiceVpcPublicSubnet3SubnetED10EC9E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "AvailabilityZone": "test-region-1c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PublicSubnet3"
     }
    ]
   }
  },
  "DogsServiceVpcPublicSubnet3RouteTable56D38303": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PublicSubnet3"
     }
    ]
   }
  },
  "DogsServiceVpcPublicSubnet3RouteTableAssociation834016AA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPublicSubnet3RouteTable56D38303"
    },
    "SubnetId": {
     "Ref": "DogsServiceVpcPublicSubnet3SubnetED10EC9E"
    }
   }
  },
  "DogsServiceVpcPublicSubnet3DefaultRouteC914967F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPublicSubnet3RouteTable56D38303"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DogsServiceVpcIGW1D454B1F"
    }
   },
   "DependsOn": [
    "DogsServiceVpcVPCGW62DB7B71"
   ]
  },
  "DogsServiceVpcPrivateSubnet1Subnet07B12260": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "AvailabilityZone": "test-region-1a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "DogsServiceVpcPrivateSubnet1RouteTable5FD5F134": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "DogsServiceVpcPrivateSubnet1RouteTableAssociationB002D11F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPrivateSubnet1RouteTable5FD5F134"
    },
    "SubnetId": {
     "Ref": "DogsServiceVpcPrivateSubnet1Subnet07B12260"
    }
   }
  },
  "DogsServiceVpcPrivateSubnet1DefaultRoute87C26ADA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPrivateSubnet1RouteTable5FD5F134"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DogsServiceVpcPublicSubnet1NATGateway7B6A309A"
    }
   }
  },
  "DogsServiceVpcPrivateSubnet2SubnetAFAE28F5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "AvailabilityZone": "test-region-1b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "DogsServiceVpcPrivateSubnet2RouteTable7CEA1B20": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "DogsServiceVpcPrivateSubnet2RouteTableAssociationF4B1236A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPrivateSubnet2RouteTable7CEA1B20"
    },
    "SubnetId": {
     "Ref": "DogsServiceVpcPrivateSubnet2SubnetAFAE28F5"
    }
   }
  },
  "DogsServiceVpcPrivateSubnet2DefaultRouteE96860F3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPrivateSubnet2RouteTable7CEA1B20"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DogsServiceVpcPublicSubnet1NATGateway7B6A309A"
    }
   }
  },
  "DogsServiceVpcPrivateSubnet3Subnet05A4329C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "AvailabilityZone": "test-region-1c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PrivateSubnet3"
     }
    ]
   }
  },
  "DogsServiceVpcPrivateSubnet3RouteTable7A3D2FC4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc/PrivateSubnet3"
     }
    ]
   }
  },
  "DogsServiceVpcPrivateSubnet3RouteTableAssociation54D890B9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPrivateSubnet3RouteTable7A3D2FC4"
    },
    "SubnetId": {
     "Ref": "DogsServiceVpcPrivateSubnet3Subnet05A4329C"
    }
   }
  },
  "DogsServiceVpcPrivateSubnet3DefaultRoute4D6A6F28": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "DogsServiceVpcPrivateSubnet3RouteTable7A3D2FC4"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DogsServiceVpcPublicSubnet1NATGateway7B6A309A"
    }
   }
  },
  "DogsServiceVpcIGW1D454B1F": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "IntegStage/AppStack/DogsService/Vpc"
     }
    ]
   }
  },
  "DogsServiceVpcVPCGW62DB7B71": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    },
    "InternetGatewayId": {
     "Ref": "DogsServiceVpcIGW1D454B1F"
    }
   }
  },
  "DogsServiceVpcRestrictDefaultSecurityGroupCustomResourceB098C7C1": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "DogsServiceVpc38F99C35",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "DogsServiceNLB07D1DCE0": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     },
     {
      "Key": "load_balancing.cross_zone.enabled",
      "Value": "true"
     }
    ],
    "Scheme": "internal",
    "Subnets": [
     {
      "Ref": "DogsServiceVpcPrivateSubnet1Subnet07B12260"
     },
     {
      "Ref": "DogsServiceVpcPrivateSubnet2SubnetAFAE28F5"
     },
     {
      "Ref": "DogsServiceVpcPrivateSubnet3Subnet05A4329C"
     }
    ],
    "Type": "network"
   }
  },
  "DogsServiceNLBapp53BAE0A1": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "DogsServiceNLBappserviceGroup80D6F9C8"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "DogsServiceNLB07D1DCE0"
    },
    "Port": 8080,
    "Protocol": "TCP"
   }
  },
  "DogsServiceNLBappserviceGroup80D6F9C8": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 11,
    "HealthyThresholdCount": 2,
    "Port": 8080,
    "Protocol": "TCP",
    "TargetType": "ip",
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    }
   }
  },
  "DogsServiceCluster50DB5F75": {
   "Type": "AWS::ECS::Cluster"
  },
  "DogsServiceCluster3D74FE87": {
   "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
   "Properties": {
    "CapacityProviders": [
     "FARGATE",
     "FARGATE_SPOT"
    ],
    "Cluster": {
     "Ref": "DogsServiceCluster50DB5F75"
    },
    "DefaultCapacityProviderStrategy": []
   }
  },
  "DogsServiceTaskDefTaskRole52A5D426": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "DogsServiceTaskDefBC18B6C7": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": {
       "Fn::Sub": "${AWS::AccountId}.dkr.ecr.us-east-2.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-us-east-2:477424ba4946a5a7bbc8236405355e5d1df254811731806ea5d1a3227ff633d0"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "DogsServiceTaskDefappLogGroup7D0EBCAA"
        },
        "awslogs-stream-prefix": "dogs",
        "awslogs-region": "us-east-2"
       }
      },
      "Name": "app",
      "PortMappings": [
       {
        "ContainerPort": 8080,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "DogsServiceTaskDefExecutionRoleEF8541E7",
      "Arn"
     ]
    },
    "Family": "IntegStageAppStackDogsServiceTaskDefCAC46794",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "DogsServiceTaskDefTaskRole52A5D426",
      "Arn"
     ]
    }
   }
  },
  "DogsServiceTaskDefappLogGroup7D0EBCAA": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain"
  },
  "DogsServiceTaskDefExecutionRoleEF8541E7": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "DogsServiceTaskDefExecutionRoleDefaultPolicy3A99609A": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:aws:ecr:us-east-2:",
          {
           "Ref": "AWS::AccountId"
          },
          ":repository/",
          {
           "Fn::Sub": "cdk-hnb659fds-container-assets-${AWS::AccountId}-us-east-2"
          }
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "DogsServiceTaskDefappLogGroup7D0EBCAA",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "DogsServiceTaskDefExecutionRoleDefaultPolicy3A99609A",
    "Roles": [
     {
      "Ref": "DogsServiceTaskDefExecutionRoleEF8541E7"
     }
    ]
   }
  },
  "DogsServiceCAC66A7D": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "DogsServiceCluster50DB5F75"
    },
    "DeploymentConfiguration": {
     "DeploymentCircuitBreaker": {
      "Enable": true,
      "Rollback": true
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DeploymentController": {
     "Type": "ECS"
    },
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "app",
      "ContainerPort": 8080,
      "TargetGroupArn": {
       "Ref": "DogsServiceNLBappserviceGroup80D6F9C8"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "DogsServiceSecurityGroup32CFF59D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "DogsServiceVpcPrivateSubnet1Subnet07B12260"
       },
       {
        "Ref": "DogsServiceVpcPrivateSubnet2SubnetAFAE28F5"
       },
       {
        "Ref": "DogsServiceVpcPrivateSubnet3Subnet05A4329C"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "DogsServiceTaskDefBC18B6C7"
    }
   },
   "DependsOn": [
    "DogsServiceNLBapp53BAE0A1",
    "DogsServiceNLBappserviceGroup80D6F9C8"
   ]
  },
  "DogsServiceSecurityGroup32CFF59D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "IntegStage/AppStack/DogsService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "DogsServiceVpc38F99C35",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "DogsServiceVpc38F99C35",
           "CidrBlock"
          ]
         },
         ":8080"
        ]
       ]
      },
      "FromPort": 8080,
      "IpProtocol": "tcp",
      "ToPort": 8080
     }
    ],
    "VpcId": {
     "Ref": "DogsServiceVpc38F99C35"
    }
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-2:",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "DogsServiceVpc38F99C35",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-us-east-2"
     },
     "S3Key": "e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs16.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ]
  },
  "VpcLink42ED6FF0": {
   "Type": "AWS::ApiGateway::VpcLink",
   "Properties": {
    "Name": "IntegStageAppStackVpcLink93B1C478",
    "TargetArns": [
     {
      "Ref": "DogsServiceNLB07D1DCE0"
     }
    ]
   }
  },
  "CatsServiceHandlerServiceRole03686F1F": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     }
    ]
   }
  },
  "CatsServiceHandler5509C977": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-us-east-2"
     },
     "S3Key": "68b2df8c71bab0bcfb29b222c52df6e0a11f8e85e6b65489005ba3de1f5df734.zip"
    },
    "Role": {
     "Fn::GetAtt": [
      "CatsServiceHandlerServiceRole03686F1F",
      "Arn"
     ]
    },
    "Environment": {
     "Variables": {
      "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1"
     }
    },
    "Handler": "index.handler",
    "Runtime": "nodejs18.x"
   },
   "DependsOn": [
    "CatsServiceHandlerServiceRole03686F1F"
   ]
  }
 },
 "Outputs": {
  "ApiEndpoint4F160690": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "https://",
      {
       "Ref": "ApiF70053CD"
      },
      ".execute-api.us-east-2.",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "ApiDeploymentStageprod3EB9684E"
      },
      "/"
     ]
    ]
   }
  },
  "ExportsOutputRefApiF70053CD5653BA4D": {
   "Value": {
    "Ref": "ApiF70053CD"
   },
   "Export": {
    "Name": "IntegStage-AppStack:ExportsOutputRefApiF70053CD5653BA4D"
   }
  },
  "ExportsOutputRefApiDeploymentStageprod3EB9684E9290AA51": {
   "Value": {
    "Ref": "ApiDeploymentStageprod3EB9684E"
   },
   "Export": {
    "Name": "IntegStage-AppStack:ExportsOutputRefApiDeploymentStageprod3EB9684E9290AA51"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
